[package]
name = "tomcrab"
version = "0.1.0"
authors = ["Darius Kryszczuk <darius.kryszczuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.*", features = ["full"] }
serde = { version ="1.0.*", features = ["derive"] } 
toml = "0.5"
